--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -6,9 +6,40 @@ header{
     background-image: url(../img/pattern.png);
     background-size: 200px 80px;
     background-color: #1490f5;
+    margin-bottom: 0;
+
+}
+
+
+
+main{
+    margin: 0;
+    padding: 60px;
+}
+
+footer{
+    padding: 60px;
 }
 
 #logo{
     width: 150px;
     padding: 60px;
+}
+
+img{
+    display: block;
+    margin: 5px;
+}
+.grey{
+    color: gray;
+}
+
+.blue{
+    color: rgb(63, 185, 255);
+}
+
+.data{
+    font-size: 12px;
+    line-height: 0.5;
+    
 }
