--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -6,14 +6,14 @@ header{
     background-image: url(../img/pattern.png);
     background-size: 200px 80px;
     background-color: #1490f5;
-    margin-bottom: 0;
-
+    background-repeat: repeat;
+    height: 80px;
 }
 
 
 
 main{
-    margin: 0;
+    
     padding: 60px;
 }
 
@@ -23,7 +23,7 @@ footer{
 
 #logo{
     width: 150px;
-    padding: 60px;
+    padding-left: 60px;
 }
 
 img{
